--- a/src/ProductsList/Product.module.css
+++ b/src/ProductsList/Product.module.css
@@ -1,9 +1,10 @@
 .product{
     position: relative;
-    box-shadow: 1px 0.5px 6px 2px #00D1FF;
+    box-shadow: 1px 0.5px 6px 2px #3f51b5;
     border-radius: 10%;
-    width: 280px;
-    height: 420px;
+    width: 270px;
+    margin: 20px;
+    height: 410px;
 }
 .wetka{
     margin-top: 15%;
