--- a/src/ProductsList/Product.module.css
+++ b/src/ProductsList/Product.module.css
@@ -1,63 +1,68 @@
 .product{
     position: relative;
-    box-shadow: 1px 0.5px 6px 2px #3f51b5;
-    border-radius: 10%;
-    width: 270px;
-    margin: 20px;
-    height: 410px;
+    margin-top: 15%;
+    border: 0.5px solid #04aec8;
+    width: 339px;
+    height: 350px;
+    text-align: left;
+}
+.product:hover .posmotret{
+    display: block;
+}
+.product:hover .wetka{
+    transform: scale(1.2,1.2);
 }
 .wetka{
-    margin-top: 15%;
-    margin-bottom: 9%;
-    width: 200px;
-    height: 200px;
+    transition: 1s;
+    position: absolute;
+    top: 6%;
+    left:21%;
+    width: 180px;
+    height: 180px;
 }
 .title{
-    position: absolute;
     color: #707070;
-    font-size: 18px;
-    margin-right: 58%;
-    font-weight: lighter;
-    font-family: Ubuntu;
-}
-.description{
-    font-size: 15px;
+    font-size: 14px;
+    position: absolute;
+    bottom: 25%;
+    left: 8%;
     font-weight: bold;
-    color: #4F5D75;
+    font-family: Ubuntu;
 }
 .descriptionDiv{
-    text-align: justify;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
+    position: absolute;
+    font-size: 13px;
+    font-weight: normal;
+    color: black;
+    bottom: 20%;
+    left: 8%;
 }
 .buy{
-    display: flex;
 }
 .price{
-    width: 20%;
-    height: 16px;
-    padding: 10px;
-    font-family: Ubuntu;
-    background-color: #C9F5FF;
-    border-radius: 1%;
-    color: #00D1FF;
-    font-weight: bold;
     position: absolute;
-    left: 20px;
-    bottom: 29px;
+    bottom: 10%;
+    left: 8%;
+    color: black;
+    font-size: 20px;
 }
-.basket{
+
+.posmotret{
+    display: none;
     position: absolute;
-    right: 12px;
-    bottom: 18px;
-    border: 1px solid #00D1FF;
-    border-radius: 50%;
-    width: 55px;
-    height: 55px;
+    bottom: 8%;
+    right: 8%;
+    color: black;
+    font-size: 20px;
+    background-color: #04aec8;
+    border-radius: 10px;
+    padding: 5px;
+    color: white;
+    transition: visibility 1s;
+    transition: 500ms;
 }
-.basket_image{
-    color: #00D1FF;
-    width: 32px;
-    height: 30px;
+.posmotret:hover{
+    color:#04aec8;
+    background-color: white;
+    border: 1px solid #04aec8;
 }
