--- a/src/ProductsList/Product.module.css
+++ b/src/ProductsList/Product.module.css
@@ -3,6 +3,7 @@
     border: 0.5px solid #ccc;
     text-align: left;
     font-family: Proxima Nova Semibold;
+    background-color: #fff;
     transition: 500ms;
 }
 .product:hover .posmotret{
@@ -27,12 +28,13 @@
     color: #707070;
     font-size: 14px;
     font-weight: bold;
-    font-family: Ubuntu;
+    font-family: Roboto;
+
 }
 .descriptionDiv{
     margin-left: 5%;
     font-size: 13px;
-    font-weight: normal;
+    font-family: Roboto;
     color: black;
 }
 .price{
@@ -41,9 +43,12 @@
     margin-left: 5%;
     color: black;
     font-size: 20px;
+    font-family: Proxima Nova Semibold;
+
 }
 
 .posmotret{
+    font-family: Proxima Nova Semibold;
     text-align: center;
     border-radius: 10px;
     margin-left: 20%;
