--- a/src/ProductsList/ProductsList.module.css
+++ b/src/ProductsList/ProductsList.module.css
@@ -1,32 +1,17 @@
 .text1div{
-    position: relative;
+    margin-top: 5%;
+    text-align: start;
+    margin-left: 2%;
+    padding-top: 1%;
 }
 .text1{
-    position: absolute;
-    left: 2%;
-    top: 10px;
     color: #000;
-    font-family: Ubuntu;
+    font-family: Roboto;
     font-size: 23px;
-}
-.text2{
-    margin-left: 6%;
-    margin-top: 0.5%;
-    text-decoration: underline;
-    color: #3f51b5;
-}
-.text2:hover{
-    cursor: pointer;
+
 }
 .productsList{
+    background-color: transparent;
     overflow: hidden;
-    height: 400px;
-    padding: 10px;
+    height: 350px;
 }
-/*.pagination{*/
-/*    display: flex;*/
-/*    margin-left: 50%;*/
-/*}*/
-/*.pagination div{*/
-/*    margin-right: 30px;*/
-/*}*/
