new carousel design3

--- a/src/ProductsList/ListOfProduct/listOfProduct.module.css
+++ b/src/ProductsList/ListOfProduct/listOfProduct.module.css
@@ -1,80 +1,119 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 .container{
+    height: 1000px;
     display: grid;
-    grid-template-columns: 25% 75%;
+    grid-template-columns: 5% 20% 70% 5%;
     margin-top: 2%;
 }
 .container2{
     display: grid;
-    grid-template-columns: auto auto auto;
-    margin-top: 2%;
+    grid-template-columns: 33% 33% 33%;
+}
+.filter{
+    border: 0.5px solid #ccc;
+    font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
+    background-color: #fff;
 }
 .product{
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10%;
-    position: relative;
-    box-shadow: 1px 0.5px 6px 2px #3f51b5;
-    border-radius: 10%;
-    width: 300px;
-    height: 440px;
+    padding-top:20px;
+    border: 0.5px solid #ccc;
+    text-align: left;
+    font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
+    background-color: #fff;
+    transition: 500ms;
+}
+.product:hover .posmotret{
+    display: block;
+}
+.product:hover{
+    margin-top: -10px;
+    box-shadow: 1px 1px 6px 1px dimgrey;
 }
 .wetka{
-    margin-top: 15%;
-    margin-bottom: 9%;
-    width: 220px;
-    height: 220px;
+    text-align: center;
+}
+.wetka_img{
+    transition: 5s;
+    width: 180px;
+    height: 180px;
 }
 .title{
-    position: absolute;
-    color: #3f51b5;
-    font-size: 18px;
-    margin-right: 58%;
-    font-weight: lighter;
-    font-family: Ubuntu;
-}
-.description{
-    font-size: 15px;
+    margin-left: 5%;
+    color: #707070;
+    font-size: 14px;
     font-weight: bold;
-    color: #3f51b5;
-    text-decoration: none !important;
-    text-underline: none !important;;
+    font-family: Roboto,sans-serif;
+
 }
 .descriptionDiv{
-    text-align: justify;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-}
-.buy{
-    display: flex;
+    margin-left: 5%;
+    font-size: 13px;
+    font-family: Roboto,sans-serif;
+    color: black;
 }
 .price{
-    width: 20%;
-    height: 16px;
-    padding: 10px;
-    font-family: Ubuntu;
-    background-color: #C9F5FF;
-    border-radius: 1%;
-    color: #3f51b5;
-    font-weight: bold;
-    position: absolute;
-    left: 20px;
-    bottom: 29px;
+    margin-top: 2%;
+    margin-bottom: 1%;
+    margin-left: 5%;
+    color: black;
+    font-size: 20px;
+    font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
+
 }
-.basket{
-    position: absolute;
-    right: 12px;
-    bottom: 18px;
-    border: 1px solid #00D1FF;
-    border-radius: 50%;
-    width: 55px;
-    height: 55px;
+
+.posmotret{
+    font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
+    text-align: center;
+    border-radius: 10px;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    display: none;
+    bottom: 8%;
+    right: 8%;
+    font-size: 20px;
+    color:#fff;
+    background-color:#04aec8;
+    padding: 5px;
+    transition: visibility 1s;
+    transition: 500ms;
+    border: 0.5px solid #04aec8;
 }
-.basket_image{
-    color: #00D1FF;
-    width: 32px;
-    height: 30px;
+.posmotret:hover{
+    color:#fff;
+    background-color:#04aec8;
+    border: 0.5px solid #04aec8;
 }
-.pricefilter{
-    display: flex;
+.inputFilter{
+    width: 100%;
+    padding: 12px 5px;
+    font-size: 16px;
+    box-sizing: border-box;
+    border: 2px solid #00D1FF;
+    border-radius: 4px;
 }
+.text{
+    margin-top: 9%;
+    text-align: left;
+    margin-left: 8%;
+    font-size: 20px;
+    font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
+}
+.text2{
+    margin-top: 5%;
+    text-align: left;
+    margin-left: 8%;
+    font-size: 20px;
+    font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
+}
+.inputDiv{
+    width: 30%;
+}
+/*.select{*/
+/*    background-color: #fff;*/
+/*    width: 80%;*/
+/*    margin-left: auto;*/
+/*    margin-right: auto;*/
+/*    height: 30px;*/
+/*}*/
