--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'proxima_nova_rgregular';
+  src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot');
+  src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.woff') format('woff'),
+  url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.ttf') format('truetype'),
+  url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.svg#proxima_nova_rgregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 .App {
   text-align: center;
   background-color: #F5F5F5;
@@ -37,9 +47,43 @@
     transform: rotate(360deg);
   }
 }
-.react-multi-carousel-list.carousel-container {
-  height: 100%;
+.MuiIconButton-colorInherit{
+  color: #00AEC8 !important;
 }
-.react-multi-carousel-track {
-  height: 324px;
+.slick-track{
+  display: flex;
+  overflow: hidden;
+  height: 500px;
+}
+.slick-list{
+  overflow: hidden;
+  width: 100%;
+}
+.slick-initialized{
+  display: flex;
+}
+.slick-arrow{
+  margin: 25px;
+  height: 25px;
+  width: 40px;
+  border-radius: 50%;
+  align-content: center;
+  align-items: center;
+  overflow: hidden;
+  margin-top: 8%;
+  padding-top: 6px;
+}
+.slick-prev:before{
+  content: "\2190";
+}
+.slick-next:before{
+  content: "\2192";
+}
+.slick-prev.slick-disabled{
+   background-color: transparent;
+   opacity: 0.25;
+ }
+.slick-next.slick-disabled {
+  background-color: transparent;
+  opacity: 0.25;
 }
