--- a/src/ProductsList/Product.module.css
+++ b/src/ProductsList/Product.module.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 .product{
     padding-top:20px;
     border: 0.5px solid #ccc;
     text-align: left;
-    font-family: Proxima Nova Semibold;
+    font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
     background-color: #fff;
     transition: 500ms;
 }
@@ -10,9 +11,10 @@
     display: block;
 }
 .product:hover .wetka{
-    transform: scale(1.1,1.1);
+    transform: scale(1.1,1.2);
 }
 .product:hover{
+    z-index: 99;
     box-shadow: 1px 1px 6px 1px dimgrey;
 }
 .wetka{
@@ -28,13 +30,13 @@
     color: #707070;
     font-size: 14px;
     font-weight: bold;
-    font-family: Roboto;
+    font-family: Roboto,sans-serif;
 
 }
 .descriptionDiv{
     margin-left: 5%;
     font-size: 13px;
-    font-family: Roboto;
+    font-family: Roboto,sans-serif;
     color: black;
 }
 .price{
@@ -43,12 +45,12 @@
     margin-left: 5%;
     color: black;
     font-size: 20px;
-    font-family: Proxima Nova Semibold;
+    font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
 
 }
 
 .posmotret{
-    font-family: Proxima Nova Semibold;
+    font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
     text-align: center;
     border-radius: 10px;
     margin-left: 20%;
