--- a/src/ProductsList/ProductsList.module.css
+++ b/src/ProductsList/ProductsList.module.css
@@ -1,17 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 .text1div{
-    margin-top: 5%;
-    text-align: start;
-    margin-left: 2%;
-    padding-top: 1%;
-}
-.text1{
-    color: #000;
-    font-family: Roboto;
-    font-size: 23px;
-
-}
-.productsList{
-    background-color: transparent;
-    overflow: hidden;
-    height: 350px;
+    margin-left:6.1%;
+    margin-right: 6.2%;
+    text-align:left;
+    background-color:#fff;
+    padding:10px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
 }
