--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   font-weight: normal;
   font-style: normal;
 }
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 .App {
   text-align: center;
   background-color: #F5F5F5;
@@ -63,15 +64,20 @@
   display: flex;
 }
 .slick-arrow{
-  margin: 25px;
   height: 25px;
-  width: 40px;
+  width: 35px;
   border-radius: 50%;
   align-content: center;
   align-items: center;
   overflow: hidden;
-  margin-top: 8%;
+  margin-top: 10%;
   padding-top: 6px;
+}
+.slick-prev{
+  margin-right: 10px;
+}
+.slick-next{
+  margin-left: 10px;
 }
 .slick-prev:before{
   content: "\2190";
