--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -1,66 +1,12 @@
 .footer{
     display: flex;
-    padding-left: 100px;
-    padding-top: 40px;
-    height: 200px;
-    background-color: #3f51b5;
+    height: 100px;
+    justify-content: space-evenly;
+    background-color: #00AEC8;
+    color: white;
+    font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
+    font-size: 20px;
 }
 .footer div{
-    margin-right: 8%;
-}
-
-.title{
-    font-size: 18px;
-    color: #fff;
-    font-weight: normal;
-    font-family: Ubuntu;
-}
-.contacts{
-    font-weight: normal;
-    font-size: 20px;
-    font-family: Ubuntu;
-    color: #fff;
-    display: block;
-    margin-top: 20px;
-    opacity: 0.7;
-}
-.contacts div{
-    margin-top: 8px;
-}
-.contacts22{
-    margin-left: 40px;
-    margin-bottom: 30px;
-}
-
-.telephone{
-    font-family: Ubuntu;
-    font-size: 20px;
-    color: #fff;
-    font-weight: normal;
-}
-.email{
-    font-family: Ubuntu;
-    font-size: 20px;
-    color: #fff;
-    font-weight: normal;
-}
-.text{
-    opacity: 0.7;
-    font-weight: normal;
-    font-size: 20px;
-    font-family: Ubuntu;
-    color: #fff;
-    display: block;
-    margin-top: 2px;
-}
-.social{
-    display: flex;
-    margin-top: 50px;
-}
-.social div{
-    margin-right: 40px;
-}
-.socialImg{
-    width: 40px;
-    height: 34px;
+    margin-top: 2.5%;
 }
