--- a/src/ProductsList/Product.module.css
+++ b/src/ProductsList/Product.module.css
@@ -53,6 +53,7 @@
 
 .posmotret{
     font-family: Montserrat;
+    font-weight: bold;
     letter-spacing: 3px;
     text-align: center;
     border-radius: 10px;
