--- a/src/ProductsList/Product.module.css
+++ b/src/ProductsList/Product.module.css
@@ -37,16 +37,18 @@
 .descriptionDiv{
     margin-left: 5%;
     margin-top: 2%;
+    height: 20px;
     font-size: 13px;
     font-family: Roboto,sans-serif;
     color: black;
 }
 .price{
-    position: absolute;
-    left:4%;
-    bottom: 15%;
+    margin-top: 4%;
+    margin-bottom: 1%;
+    margin-left: 5%;
     color: black;
     font-size: 20px;
+    font-weight: bold;
     font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
 
 }
@@ -54,15 +56,15 @@
 .posmotret{
     font-family: Montserrat;
     font-weight: bold;
-    letter-spacing: 3px;
+    letter-spacing: 0.3rem;
     text-align: center;
     border-radius: 10px;
     position: absolute;
     display: none;
     bottom: 5%;
-    left: 22%;
-    font-size: 14px;
-    padding: 5px;
+    left: 13%;
+    font-size: 18px;
+    padding: 5px 20px;
     color:#fff;
     background-color:#04aec8;
     border: 1px solid #04aec8;
