--- a/src/ProductsList/ProductsList.module.css
+++ b/src/ProductsList/ProductsList.module.css
@@ -1,11 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 .text1div{
-    margin-left:auto;
-    margin-right: auto;
-    width: 980px;
+    width: 100%;
     text-align:left;
-    background-color:#fff;
-    padding:10px;
+    background-color:#00AEC8;
+    height: 150px;
+    position: absolute;
+    margin-top: 3%;
     font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    padding-top: 20px;
+}
+.text{
+    font-family: Montserrat;
+    font-weight: bold;
+    color: white;
+    font-size: 1.5rem;
+    margin-left: 15%;
 }
