--- a/src/ProductsList/Product.module.css
+++ b/src/ProductsList/Product.module.css
@@ -1,4 +1,60 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+@media (max-width: 1024px) {
+    .product{
+        height: 250px !important;
+    }
+    .posmotret{
+        font-family: Montserrat;
+        font-weight: bold;
+        letter-spacing: 0.3rem;
+        text-align: center;
+        border-radius: 10px;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-top: 8% !important;
+        display: none;
+        font-size: 14px !important;
+        padding: 5px 20px;
+        color:#fff;
+        background-color:#04aec8;
+        border: 1px solid #04aec8;
+        transition: 500ms;
+    }
+    .product:hover{
+        z-index: 99;
+        box-shadow: 1px 1px 6px 1px dimgrey;
+        padding-bottom: 60px !important;
+    }
+}
+@media (max-width: 900px) {
+    .product{
+        height: 250px !important;
+    }
+    .posmotret{
+        font-family: Montserrat;
+        font-weight: bold;
+        letter-spacing: 0.2rem !important;
+        text-align: center;
+        border-radius: 10px;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-top: 8% !important;
+        display: none;
+        font-size: 12px !important;
+        padding: 3px 15px !important;
+        color:#fff;
+        background-color:#04aec8;
+        border: 1px solid #04aec8;
+        transition: 500ms;
+    }
+    .product:hover{
+        z-index: 99;
+        box-shadow: 1px 1px 6px 1px dimgrey;
+        padding-bottom: 40px !important;
+    }
+}
+
 .product{
     position: relative;
     height: 300px;
@@ -43,7 +99,7 @@
     color: black;
 }
 .price{
-    margin-top: 4%;
+    margin-top: 6%;
     margin-bottom: 1%;
     margin-left: 5%;
     color: black;
@@ -59,10 +115,10 @@
     letter-spacing: 0.3rem;
     text-align: center;
     border-radius: 10px;
-    position: absolute;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 12%;
     display: none;
-    bottom: 5%;
-    left: 13%;
     font-size: 18px;
     padding: 5px 20px;
     color:#fff;
