--- a/src/Basket/Oplata4ek/Oplata.module.css
+++ b/src/Basket/Oplata4ek/Oplata.module.css
@@ -2,12 +2,26 @@
     display: flex;
     border:1px solid #ccc;
     width: 80%;
-    height: 600px;
+    height: 500px;
     position: absolute;
-    top: 28%;
+    top: 20%;
     left: 10%;
     z-index: 1;
     background-color: white;
+}
+.oplataButton{
+    border-radius: 3px;
+    background-color: #00D1FF;
+    border: 2px solid #00D1FF;
+    color: white;
+    padding: 15px 32px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+    cursor: pointer;
+    font-family: Ubuntu;
+    font-weight: lighter;
+    margin-top: 10%;
 }
 .oplatatext{
     font-size: 30px;
@@ -35,6 +49,7 @@
     width: 50%;
 }
 .sss{
+    overflow: scroll;
     width: 50%;
     background-color: #B1E0E8;
 }
