--- a/src/Auth/LoginComponent.module.css
+++ b/src/Auth/LoginComponent.module.css
@@ -102,6 +102,7 @@
         font-size: 3px !important;
         margin-top: auto;
         margin-bottom: auto;
+        background-color: #b1e0e8;
     }
 }
 
