--- a/src/Basket/BasketItem.module.css
+++ b/src/Basket/BasketItem.module.css
@@ -33,8 +33,7 @@
     height: 150px;
 }
 .titles{
-    display: grid;
-    grid-template-columns: auto auto auto auto;
+    display: flex;
     width: 100%;
     margin-top: 3%;
     /*margin-left: auto;*/
@@ -50,6 +49,7 @@
 }
 .box_quantity{
     display: flex;
+    margin-left: 40%;
     font-size: 25px;
     font-family: Ubuntu;
 }
